--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.2",
+    "mongoose": "^6.11.1",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
-    "nodemon": "^2.0.20",
-    "react-router-dom": "^6.8.1",
+    "nodemon": "^2.0.22",
+    "react-router-dom": "^6.11.1",
+    "reactjs-popup": "^2.0.5",
     "s": "^1.0.0",
     "validator": "^13.9.0"
   },
